NoDecklink + info CUDA

--- a/UniversalNETCom/UniversalNETCom.csproj
+++ b/UniversalNETCom/UniversalNETCom.csproj
@@ -29,12 +29,21 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug-No Decklink|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug-No Decklink\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CLProtocol">
-      <HintPath>3Party\CLProtocol.dll</HintPath>
+      <HintPath>..\..\VAS\VAS\3Party\CLProtocol.dll</HintPath>
     </Reference>
     <Reference Include="ServiceProvider">
-      <HintPath>3Party\ServiceProvider.dll</HintPath>
+      <HintPath>..\..\VAS\VAS\3Party\ServiceProvider.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
